tests/36-bytes-param-with-invalid-value-2.stderr
error: encountered malformatted integer value for bytes parameter: invalid digit found in string
 --> $DIR/36-bytes-param-with-invalid-value-2.rs:4:20
  |
4 | #[bitfield(bytes = -1)]
  |                    ^
